--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="/assets/css/sections/hero.css">
+    <link rel="stylesheet" href="assets\css\main.css">
+    <link rel="stylesheet" href="assets\css\sections\hero.css">
     <title>Interfaces TP4</title>
 </head>
 <body>
