--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
 
         <section id="hero">
 
-            <div id="menu-toggle">
-                <div class="bar" id="bar1"></div>
-                <div class="bar" id="bar2"></div>
-                <div class="bar" id="bar3"></div>
+            <div id="header">
+                <div id="menu-toggle">
+                    <div class="bar" id="bar1"></div>
+                    <div class="bar" id="bar2"></div>
+                    <div class="bar" id="bar3"></div>
+                </div>
+    
+                <img id="logo-hero" class="logo-hero1" src="assets\images\Section HERO\logo.png" alt="">
+    
+                <div id="boton-comprar">
+                    <p>COMPRAR</p>
+                </div>
             </div>
-
-            <img id="logo-hero" src="assets\images\Section HERO\logo.png" alt="">
 
             <img id="img-arbol1" src="assets\images\Section HERO\arbol1.png" alt="">
             <img id="img-arbol2" src="assets\images\Section HERO\arbol2.png" alt="">
