--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     </section>
     
-<script src="/assets/js/main.js"></script>
-<script src="/assets/js/stickyHeader.js"></script>
+<script src="assets/js/main.js"></script>
+<script src="assets/js/stickyHeader.js"></script>
 </body>
 </html>
