--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
             <img id="img-personajerojo" src="assets\images\Section HERO\personajerojo1.png" alt="">
-            <img id="img-personajeanaranja" src="assets\images\Section HERO\personajenaranja2.png" alt="">
+            <img id="img-personajenaranja" src="assets\images\Section HERO\personajenaranja2.png" alt="">
             <img id="img-personajeamarillo" src="assets\images\Section HERO\personajeamarillo3.png" alt="">
 
             <!-- 
@@ -71,5 +71,7 @@
 <script src="assets/js/main.js"></script>
 <script src="assets/js/loader.js"></script>
 <script src="assets/js/stickyHeader.js"></script>
+<script src="assets/js/heroParallax.js"></script>
+
 </body>
 </html>
