--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets\css\main.css">
     <link rel="stylesheet" href="assets\css\sections\hero.css">
     <link rel="stylesheet" href="assets\css\sections\loader.css">
+    <link rel="stylesheet" href="assets\css\sections\la-app-mas-divertida.css">
 
 
     <title>Interfaces TP4</title>
@@ -64,6 +65,30 @@
             <!-- 
             -->
         </section>
+        <section id="la-app-mas-divertida">
+
+            <div id="text-container1">
+                <p> La app mas divertida y educativa para niños de 3 años</p>
+            </div>
+            <div id="text-container2">
+                <p>Numberblocks World es una divertida aplicación de vídeo a la carta y juegos por suscripción dirigida a niños a partir de 3 años, con un grupo de edad principal de 4 a 6 años, creada por el equipo de Alphablocks Ltd. y Blue Zoo Animations Studio, ganador de un premio BAFTA.</p>
+            </div>
+
+
+            <img id="slider-img" src="assets\images\Section La app más divertida y educativa y para niños de 3 años\img1.png" alt="">
+
+        </section>
+        <section id="la-app-mas-divertida2">
+            <img id="img-personajeverde" src="assets\images\Section La app más divertida y educativa y para niños de 3 años\personajeverde.png" alt="">
+            <img id="img-personajeazul" src="assets\images\Section La app más divertida y educativa y para niños de 3 años\personajeazul.png" alt="">
+        
+            <img id="img-cards-1" src="assets\images\Section La app más divertida y educativa y para niños de 3 años\img1.png" alt="">
+            <p id="p-card1">Los niños descubrirán lo divertido que puede ser aprender matemáticas. A través de personajes animados y desafíos interactivos, podrán sumar, restar y entender conceptos básicos de manera fácil y entretenida. ¡Cada número cobra vida para hacer que las matemáticas sean emocionantes!</p>
+            <img id="img-cards-2" src="assets\images\Section La app más divertida y educativa y para niños de 3 años\img2.png" alt="">
+            <p id="p-card2">Con NumberBlocks, los niños encontrarán emocionantes retos en cada nivel, diseñados para hacer que el aprendizaje sea tan divertido como un juego. ¡Cada desafío es una nueva aventura matemática! Diviértete e invita a tus amigos, desafíalos y gana premios.</p>
+            <img id="img-cards-3" src="assets\images\Section La app más divertida y educativa y para niños de 3 años\img3.png" alt="">
+            <p id="p-card3">Entrena a UNO y Comparte lo que Aprendes!En NumberBlocks, deberás enseñar a UNO cada lección que aprendas, ayudándolo a crecer y superar nuevos desafíos matemáticos. ¡Conviértete en su mejor guía! Se su mejor amigo y diviértete con él.</p>
+        </section>
 
     </section>
     <script src="assets/js/menuHamburguesa.js"></script>
@@ -72,6 +97,8 @@
 <script src="assets/js/loader.js"></script>
 <script src="assets/js/stickyHeader.js"></script>
 <script src="assets/js/heroParallax.js"></script>
+<script src="assets/js/slider.js"></script>
+<script src="assets/js/la-app-masParallax.js"></script>
 
 </body>
 </html>
