modifico loader, agrego animaciones

--- a/index.html
+++ b/index.html
@@ -23,10 +23,18 @@
 
 
     <section id="container-main">
-
         <div id="loader">
-            <div id="spinner"></div>
+            <h1>¡Cargando la diversión!</h1>
+            <div id="spinner">
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+            </div>
         </div>
+        
+        
 
         <section id="hero">
 
@@ -126,7 +134,8 @@
         </section>
 
         <section id="mas-amigos-mas-diversion">
-            <div id="contenedor">
+        <div class="carousel-container">
+            <div class="contenedor">
                 <div id="imagen-izq">
                     <img src="assets/images/Section mas-amigos-mas-diversion/cero.png" alt="">
                 </div>
@@ -138,7 +147,7 @@
                         increíbles!</p>
                 </div>
             </div>
-            <div id="contenedor">
+            <div class="contenedor">
                 <div id="imagen-izq">
                     <img src="assets/images/Section mas-amigos-mas-diversion/uno.png" alt="">
                 </div>
@@ -150,7 +159,7 @@
                         rompecabezas para llegar a la meta!</p>
                 </div>
             </div>
-            <div id="contenedor">
+            <div class="contenedor">
                 <div id="imagen-izq">
                     <img src="assets/images/Section mas-amigos-mas-diversion/dos.png" alt="">
                 </div>
@@ -161,7 +170,7 @@
                         ventaja extra! Con cada carrera, aprenderás a contar y a pensar rápido.</p>
                 </div>
             </div>
-            <div id="contenedor">
+            <div class="contenedor">
                 <div id="imagen-izq">
                     <img src="assets/images/Section mas-amigos-mas-diversion/trespng.png" alt="">
                 </div>
@@ -172,7 +181,7 @@
                         especial! Observa bien y explora cada rincón para descubrir dónde se esconde.</p>
                 </div>
             </div>
-            <div id="contenedor">
+            <div class="contenedor">
                 <div id="imagen-izq">
                     <img src="assets/images/Section mas-amigos-mas-diversion/cuatro.png" alt="">
                 </div>
@@ -183,7 +192,7 @@
                         orden de tamaño, ¡y desbloquea recompensas cada vez que aciertes!</p>
                 </div>
             </div>
-            <div id="contenedor">
+            <div class="contenedor">
                 <div id="imagen-izq">
                     <img src="assets/images/Section mas-amigos-mas-diversion/cinco.png" alt="">
                 </div>
@@ -194,7 +203,7 @@
                         divertida de practicar la construcción de números y descubrir cómo encajan!</p>
                 </div>
             </div>
-            <div id="contenedor">
+            <div class="contenedor">
                 <div id="imagen-izq">
                     <img src="assets/images/Section mas-amigos-mas-diversion/seis.png" alt="">
                 </div>
@@ -205,7 +214,7 @@
                         Observa bien y explora cada rincón para descubrir dónde se esconde.</p>
                 </div>
             </div>
-            <div id="contenedor">
+            <div class="contenedor">
                 <div id="imagen-izq">
                     <img src="assets/images/Section mas-amigos-mas-diversion/siete.png" alt="">
                 </div>
@@ -216,7 +225,7 @@
                         Cada salto exitoso te acerca a un nuevo nivel.</p>
                 </div>
             </div>
-            <div id="contenedor">
+            <div class="contenedor">
                 <div id="imagen-izq">
                     <img src="assets/images/Section mas-amigos-mas-diversion/ocho.png" alt="">
                 </div>
@@ -227,7 +236,7 @@
                         ¡Cada secuencia completada revela una animación especial!</p>
                 </div>
             </div>
-            <div id="contenedor">
+            <div class="contenedor">
                 <div id="imagen-izq">
                     <img src="assets/images/Section mas-amigos-mas-diversion/nueve.png" alt="">
                 </div>
@@ -239,7 +248,7 @@
                         multiplicación básica!</p>
                 </div>
             </div>
-            <div id="contenedor">
+            <div class="contenedor">
                 <div id="imagen-izq">
                     <img src="assets/images/Section mas-amigos-mas-diversion/diez.png" alt="">
                 </div>
@@ -251,6 +260,7 @@
                         Un desafío perfecto para entender la división de una forma divertida y visual.</p>
                 </div>
             </div>
+        </div>
         </section>
 
         <section id="mira-el-video">
@@ -372,6 +382,7 @@
     <script src="assets/js/slider.js"></script>
     <script src="assets/js/la-app-masParallax.js"></script>
     <script src="assets/js/descubre-el-juego.js"></script>
+    <script src="assets/js/mas-amigos-mas-diversion.js"></script>
 
 </body>
 
