Modifico seccion 3d segun figma

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </section>
 
         <section id="experimenta-efectos-3D">
-            <div id="conteneir-3d">
+            <div id="container-3d">
                 <div id="texto-3d">
                     <h1>¡Experimenta Efectos 3D Asombrosos en NumberBlocks:
                         Una Aventura Matemática Inmersiva!</h1>
