--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
             </div>
 
             <div id="seis-numeros">
-                <img src="assets/images/Section juego-mas-divertido/laAppMasDivertida.png" alt="">
+                <img src="assets/images/Section juego-mas-divertido/laAppMasDivertida.png" alt="" id="game-image">>
                 <button class="btn">¡Descarga NumberBlocks hoy!</button>
             </div>
         </section>
 
         <section id="mas-amigos-mas-diversion">
-        <div class="carousel-container">
+        
             <div class="contenedor">
                 <div id="imagen-izq">
                     <img src="assets/images/Section mas-amigos-mas-diversion/cero.png" alt="">
@@ -270,12 +270,14 @@
                 <h1>Mira el video y descubre el sorprendente mundo de los NumberBlocks!</h1>
             </div>
             <div id="container">
-                <div class="imagen-con-play">
-                    <a href="https://www.youtube.com/watch?app=desktop&v=0YKa9DQYdRg" target="_blank"
-                        class="enlace-youtube">
-                        <div class="play-icon">▶</div>
-                    </a>
-                    <img src="assets/images/Section mira-el-video/imagen-video.png" alt="Imagen" />
+                <div class="video-container">
+                    <iframe 
+                        src="https://www.youtube.com/embed/0YKa9DQYdRg?autoplay=1&mute=1" 
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen>
+                    </iframe>
                 </div>
 
                 <div id="img-tres">
@@ -415,6 +417,7 @@
     <script src="assets/js/la-app-masParallax.js"></script>
     <script src="assets/js/descubre-el-juego.js"></script>
     <script src="assets/js/mas-amigos-mas-diversion.js"></script>
+    <script src="assets/js/mira-el-video.js"></script>
 
 </body>
 
