Modifico menu hamburguesa segun consigna

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 </div>
 
                 <div id="menu-abierto">
-                    <p>Opcion 1</p>
-                    <p>Opcion 2</p>
-                    <p>Opcion 3</p>
+                    <p><a href="#mira-el-video">Mira el video</a></p>
+                    <p><a href="#experimenta-efectos-3D">Experimenta 3D</a></p>
+                    <p><a href="#grilla-de-colores">Grilla de colores</a></p>
                 </div>
 
                 <img id="logo-hero" class="logo-hero-big" src="assets\images\Section HERO\logo.png" alt="">
