realizo seccion spritesheet con tres sheets

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/sections/novedades.css">
     <link rel="stylesheet" href="assets/css/sections/footer.css">
     <link rel="stylesheet" href="assets/css/sections/grilla-de-colores.css">
-
+    <link rel="stylesheet" href="assets/css/sections/sprite-sheet.css">
     <title>Interfaces TP4</title>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@google/model-viewer"></script>
 
@@ -373,6 +373,20 @@
                 <img src="assets/images/Section novedades/pasto.png" alt="">
             </div>
         </section>
+        <section id="sprite-sheet">
+            <div id="container-sheet">
+                <div id="texto-sheet">
+                    <h1>¡Los números se mueven solos!</h1>
+                    <p>¡Aquí podemos ver cómo los números toman vida solos!</p>
+                </div>
+                <div id="sprites-container">
+                    <div class="number-sprite1"></div>
+                    <div class="number-sprite2"></div>
+                    <div class="number-sprite3"></div>
+                </div>
+            </div>
+        </section>
+        
 
         <section id="footer">
             <div id="footer-img">
