ajuste segun figma

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
 
             <div id="seis-numeros">
-                <img src="assets/images/Section juego-mas-divertido/laAppMasDivertida.png" alt="" id="game-image">>
+                <img src="assets/images/Section juego-mas-divertido/laAppMasDivertida.png" alt="" id="game-image">
                 <button class="btn">¡Descarga NumberBlocks hoy!</button>
             </div>
         </section>
