--- a/index.html
+++ b/index.html
@@ -346,6 +346,10 @@
             <div id="textoPrincipal">
                 <h1>¿Quieres ser el primero en enterarse de todas las novedades?</h1>
             </div>
+            <div class="input-button-container">
+                <input type="text" placeholder="Ingresa aqui tu correo" class="input-field">
+                <button class="btn-novedades">SUSCRIBIRSE</button>
+              </div>
             <div id="subscribirse"></div>
             <div id="textoSuscripcion">
                 <p>Al inscribirse en nuestra lista de correo, nos autoriza a ponernos
