--- a/index.html
+++ b/index.html
@@ -108,21 +108,27 @@
                 src="assets\images\Section La app más divertida y educativa y para niños de 3 años\personajeazul.png"
                 alt="">
 
-            <img id="img-cards-1"
-                src="assets\images\Section La app más divertida y educativa y para niños de 3 años\img1.png" alt="">
-            <p id="p-card1">Los niños descubrirán lo divertido que puede ser aprender matemáticas. A través de
-                personajes animados y desafíos interactivos, podrán sumar, restar y entender conceptos básicos de manera
-                fácil y entretenida. ¡Cada número cobra vida para hacer que las matemáticas sean emocionantes!</p>
-            <img id="img-cards-2"
-                src="assets\images\Section La app más divertida y educativa y para niños de 3 años\img2.png" alt="">
-            <p id="p-card2">Con NumberBlocks, los niños encontrarán emocionantes retos en cada nivel, diseñados para
-                hacer que el aprendizaje sea tan divertido como un juego. ¡Cada desafío es una nueva aventura
-                matemática! Diviértete e invita a tus amigos, desafíalos y gana premios.</p>
-            <img id="img-cards-3"
-                src="assets\images\Section La app más divertida y educativa y para niños de 3 años\img3.png" alt="">
-            <p id="p-card3">Entrena a UNO y Comparte lo que Aprendes!En NumberBlocks, deberás enseñar a UNO cada lección
-                que aprendas, ayudándolo a crecer y superar nuevos desafíos matemáticos. ¡Conviértete en su mejor guía!
-                Se su mejor amigo y diviértete con él.</p>
+
+                    <img id="img-cards-1"
+                    src="assets\images\Section La app más divertida y educativa y para niños de 3 años\img1.png" alt="">
+                <p id="p-card1">Los niños descubrirán lo divertido que puede ser aprender matemáticas. A través de
+                    personajes animados y desafíos interactivos, podrán sumar, restar y entender conceptos básicos de manera
+                    fácil y entretenida. ¡Cada número cobra vida para hacer que las matemáticas sean emocionantes!</p>
+
+
+                    <img id="img-cards-2"
+                    src="assets\images\Section La app más divertida y educativa y para niños de 3 años\img2.png" alt="">
+                <p id="p-card2">Con NumberBlocks, los niños encontrarán emocionantes retos en cada nivel, diseñados para
+                    hacer que el aprendizaje sea tan divertido como un juego. ¡Cada desafío es una nueva aventura
+                    matemática! Diviértete e invita a tus amigos, desafíalos y gana premios.</p>
+
+
+                    <img id="img-cards-3"
+                    src="assets\images\Section La app más divertida y educativa y para niños de 3 años\img3.png" alt="">
+                <p id="p-card3">Entrena a UNO y Comparte lo que Aprendes!En NumberBlocks, deberás enseñar a UNO cada lección
+                    que aprendas, ayudándolo a crecer y superar nuevos desafíos matemáticos. ¡Conviértete en su mejor guía!
+                    Se su mejor amigo y diviértete con él.</p>
+
         </section>
 
         <section id="descubre-el-juego-mas-divertido">
@@ -343,6 +349,10 @@
         
 
         <section id="novedades">
+            <img id="fn1" src="assets/images/Section novedades/nube-izquierda.png" alt="">
+            <img id="fn2" src="assets/images/Section novedades/nube-izquierda.png" alt="">
+            <img id="fn3" src="assets/images/Section novedades/nube-izquierda.png" alt="">
+
             <div id="textoPrincipal">
                 <h1>¿Quieres ser el primero en enterarse de todas las novedades?</h1>
             </div>
@@ -357,21 +367,18 @@
                     marketing por correo electrónico, y también acepta nuestra Política de
                     privacidad y las Condiciones del servicio.</p>
             </div>
-            <div>
+            <div id="footer-img-teen">
                 <img src="assets/images/Section novedades/tng.png" alt="">
-            </div>
-            <div>
-                <img src="assets/images/Section novedades/nube-izquierda.png" alt="">
             </div>
             <div id="contenedorNumeros">
                 <div id="dos">
-                    <img src="assets/images/Section novedades/dos.png" alt="">
+                    <img src="assets/images/Section novedades/personaje2.webp" alt="">
                 </div>
                 <div id="tres">
-                    <img src="assets/images/Section novedades/tres.png" alt="">
+                    <img src="assets/images/Section novedades/personaje3.webp" alt="">
                 </div>
                 <div id="siete">
-                    <img src="assets/images/Section novedades/siete.png" alt="">
+                    <img src="assets/images/Section novedades/personaje7.webp" alt="">
                 </div>
             </div>
             <div id="cesped">
@@ -430,10 +437,12 @@
 
     <script src="assets/js/main.js"></script>
     <script src="assets/js/loader.js"></script>
+    <script src="assets/js/footerParallax.js"></script>
     <script src="assets/js/stickyHeader.js"></script>
     <script src="assets/js/heroParallax.js"></script>
     <script src="assets/js/slider.js"></script>
     <script src="assets/js/la-app-masParallax.js"></script>
+    <script src="assets/js/la-app-mas-divertida2.js"></script>
     <script src="assets/js/descubre-el-juego.js"></script>
     <script src="assets/js/mas-amigos-mas-diversion.js"></script>
     <script src="assets/js/mira-el-video.js"></script>
