--- a/index.html
+++ b/index.html
@@ -392,9 +392,7 @@
                     <p>¡Aquí podemos ver cómo los números toman vida solos!</p>
                 </div>
                 <div id="sprites-container">
-                    <div class="number-sprite1"></div>
-                    <div class="number-sprite2"></div>
-                    <div class="number-sprite3"></div>
+                    <img  id="sprite-sheet" src="assets/images/Seccion sprite-sheet/sheet1.webp" alt="">
                 </div>
             </div>
         </section>
