--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                     <p>¡Aquí podemos ver cómo los números toman vida solos!</p>
                 </div>
                 <div id="sprites-container">
-                    <img  id="sprite-sheet" src="assets/images/Seccion sprite-sheet/sheet1.webp" alt="">
+                    <img  id="sprite-sheet" src="assets/images/Seccion sprite-sheet/sps/1.png" alt="">
                 </div>
             </div>
         </section>
@@ -444,6 +444,7 @@
     <script src="assets/js/descubre-el-juego.js"></script>
     <script src="assets/js/mas-amigos-mas-diversion.js"></script>
     <script src="assets/js/mira-el-video.js"></script>
+    <script src="assets/js/spritesheets.js"></script>
 
 </body>
 
