--- a/index.html
+++ b/index.html
@@ -388,11 +388,11 @@
         <section id="sprite-sheet">
             <div id="container-sheet">
                 <div id="texto-sheet">
-                    <h1>¡Los números se mueven solos!</h1>
-                    <p>¡Aquí podemos ver cómo los números toman vida solos!</p>
+                    <h1>¡Gracias por visitar nuestra página!</h1>
+                    <p>¡Esperamos que te haya gustado!</p>
                 </div>
                 <div id="sprites-container">
-                    <img  id="sprite-sheet" src="assets/images/Seccion sprite-sheet/sps/1.png" alt="">
+                    <img  id="sprite-sheett" src="assets/images/Seccion sprite-sheet/sps/uno.png" alt="">
                 </div>
             </div>
         </section>
@@ -444,7 +444,7 @@
     <script src="assets/js/descubre-el-juego.js"></script>
     <script src="assets/js/mas-amigos-mas-diversion.js"></script>
     <script src="assets/js/mira-el-video.js"></script>
-    <script src="assets/js/spritesheets.js"></script>
+    <script src="assets/js/spritesheet.js"></script>
 
 </body>
 
