agrego dos spriteSheets mas

--- a/index.html
+++ b/index.html
@@ -385,7 +385,16 @@
                     <p>¡Esperamos que te haya gustado!</p>
                 </div>
                 <div id="sprites-container">
+                    <!-- Primer spritesheet -->
+                    <div id="animation-container-left">
+                        <div class="character"></div>
+                    </div>
+                    <!-- Imagen central -->
                     <img id="sprite-sheett" src="assets/images/Seccion sprite-sheet/sps/uno.png" alt="">
+                    <!-- Segundo spritesheet -->
+                    <div id="animation-container-right">
+                        <div class="character"></div>
+                    </div>
                 </div>
             </div>
         </section>
