--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <h1>Mira el video y descubre el sorprendente mundo de los NumberBlocks!</h1>
             </div>
             <div id="container">
-                <div class="video-container">
+                <div class="video-container parallax-video hidden">
                     <iframe src="https://www.youtube.com/embed/0YKa9DQYdRg?autoplay=1&mute=1"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -301,7 +301,7 @@
                     </iframe>
                 </div>
 
-                <div id="img-tres">
+                <div id="img-tres" class="parallax-img hidden">
                     <img src="assets/images/Section mira-el-video/img-tres.png" alt="">
                 </div>
 
